B&L QA/objects/Effectiveness_Summary__c.object
<CustomObject>
    <description>INDSU object to capture the Effectiveness Summary Information</description>
    <fields>
        <fullName>ABC_Classification__c</fullName>
        <description>INDSU field to capture the store classification of the account the visits made to</description>
        <label>Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Medical Centers</fullName>
                </value>
                <value>
                    <fullName>Movers and Shakers</fullName>
                </value>
                <value>
                    <fullName>Stars</fullName>
                </value>
                <value>
                    <fullName>Rising Stars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Calls__c</fullName>
        <description>INDSU field to capture the no. of visits made on the day</description>
        <label>Actual Calls</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>INDSU field to capture the area the visits made to</description>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>INDSU field to capture the country the visits made to</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>INDSU field to capture the date the visits were made on</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OT_Hours__c</fullName>
        <label>OT Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective_Met__c</fullName>
        <description>INDSU field to capture the no. of stores where objective was met on the day</description>
        <label>Objective Met</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <description>INDSU field to capture the type of visits.</description>
        <label>Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>INDSU field to capture the region the visits made to</description>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <description>INDSU field to uniquely identify the record. The value will be a combination of Country, Region, Area and Owner.</description>
        <externalId>true</externalId>
        <label>Unique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Effectiveness Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EF{00000000}</displayFormat>
        <label>Effectiveness Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Effectiveness Summary</pluralLabel>
    <recordTypes>
        <fullName>APACSU_Effectiveness_Summary</fullName>
        <active>true</active>
        <description>APACSU record type to capture effective summary information for report generation</description>
        <label>APACSU Effectiveness Summary</label>
    </recordTypes>
    <recordTypes>
        <fullName>Effectiveness_Summary</fullName>
        <active>true</active>
        <description>INDSU record type to capture effective summary information for report generation</description>
        <label>Effectiveness Summary</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>